--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <div id="title">
         <h1>NASA Gallery</h1>
     </div>
-    <label for="dropSearch"></label>
-    <input type="text" id="dropSearch" name="dropSearch" placeholder="Search NASA">
-    <div id="dropDown" class="hide">
+
+    <div id="dropBox">
+        <label for="dropSearch"></label>
+        <input type="text" id="dropSearch" name="dropSearch" placeholder="Search NASA">
+
+        <div id="dropDown" class="hide">
+        </div>
     </div>
     <button id="btn1">Search</button>
-    <div class="text">
-    </div>
+
+    <div class="text"></div>
 </body>
 </html>
