--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div id="title">
         <h1>NASA Gallery</h1>
+        <div id="load_bar" class="hide">
+            <div class="load_progress"></div>
+        </div>
     </div>
 
     <div id="dropBox">
