added a back to top button, added the links for the keywords on each big image card, as well as created a random search to pre generate images on the site

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <div id="title">
         <h1>NASA Gallery</h1>
+        <input type="checkbox" name="images" id="images" checked>
+        <label for="images">Images</label>
+        <input type="checkbox" name="video" id="videos">
+        <label for="videos">Videos</label>
         <div id="load_bar" class="hide">
             <div class="load_progress"></div>
         </div>
@@ -25,5 +29,6 @@
     <button id="btn1">Search</button>
 
     <div class="text"></div>
+<button id="back2top">Back to top</button>
 </body>
 </html>
