added better styling for the columns, as well as added styling for the search  bar, i removed the drop down

--- a/images/index.html
+++ b/images/index.html
@@ -19,13 +19,14 @@
         </div>
     </div>
 
-
-    <div id="searchBar">
+    <div id="dropBox">
         <label for="dropSearch"></label>
-
         <input type="text" id="dropSearch" name="dropSearch" placeholder="Search NASA">
-        <button id="btn1">Search</button>
+
+<!--        <div id="dropDown" class="hide">-->
+<!--        </div>-->
     </div>
+    <button id="btn1">Search</button>
 
     <div id="text"></div>
 <button id="back2top">Back to top</button>
