--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 
     <div id="nasa_gallery"></div>
 <button id="back2top">Back to top</button>
+<button id="backButton" class="hide">Go Back</button>
 </body>
 </html>
