--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input type="text" id="dropSearch" name="dropSearch" placeholder="Search NASA">
         <button id="btn1">Search</button>
     </div>
-    <div id="warn"></div>
+    <p id="warning"></p>
 
     <div id="nasa_gallery"></div>
 <button id="back2top">Back to top</button>
