--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p id="warning"></p>
 
     <div id="nasa_gallery"></div>
-<button id="back2top">Back to top</button>
-<button id="backButton" class="hide">Go Back</button>
+<img id="back2top" src="images/arrow-up.png" alt="Up arrow indicating the back to top button">
+<img class="hide" id="backButton" src="images/left-arrow.png" alt="Left arrow indicating the go back button">
 </body>
 </html>
